--- a/index.html
+++ b/index.html
@@ -4,46 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edukids - Plataforma Educativa</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./static/css/style.css">
     <script defer src="./static/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Edukids</h1>
+        <h1 id="header-title">Bienvenido a Edukids</h1>
         <p>Una plataforma para apoyar el aprendizaje de niños en memoria, lógica, cultura y lenguaje.</p>
     </header>
 
     <main>
-        <section id="menu-seccion">
+        <section id="seccion-login">
+            <h2>¡Hola! ¿Cómo te llamas?</h2>
+            <input type="text" id="nombre-usuario" placeholder="Escribe tu nombre aquí" autocomplete="off">
+            <button id="btn-iniciar">Empezar a Jugar</button>
+        </section>
+
+        <section id="menu-seccion" style="display: none;">
             <h2>Selecciona un Desafío:</h2>
             <div class="menu-opciones">
-                <button id="btn-desafio1" data-challenge="1">1. Memoria</button>
-                <button id="btn-desafio2" data-challenge="2">2. Operaciones</button>
-                <button id="btn-desafio3" data-challenge="3">3. Quiz</button>
-                <button id="btn-desafio4" data-challenge="4">4. Adivina la palabra</button>
+                <button data-challenge="memoria">1. Memoria</button>
+                <button data-challenge="operaciones">2. Operaciones</button>
+                <button data-challenge="quiz">3. Quiz</button>
+                <button data-challenge="adivinaLaPalabra">4. Adivina la palabra</button>
             </div>
-            <button id="btn-limpiar-score">Borrar Puntaje</button>
-            <p class="mensaje-salir">Para salir, cierra la pestaña.</p>
-
+            <div class="acciones-menu">
+                <button id="btn-finalizar-sesion">Finalizar y Ver Reporte</button>
+                <button id="btn-limpiar-historial">Borrar Historial</button>
+            </div>
             <div class="scores-tabla">
-                <h3>Puntajes Guardados:</h3>
+                <h3>Historial de Puntajes:</h3>
                 <ul id="score-lista">
-                    </ul>
+                    <li>No hay puntajes guardados aún.</li>
+                </ul>
             </div>
         </section>
 
         <section id="seccion-desafio" style="display: none;">
             <h2 id="desafio-titulo"></h2>
-            <div id="contenido-desafio">
-                </div>
+            <div id="contenido-desafio"></div>
             <button id="btn-volver-menu">Volver al Menú</button>
         </section>
 
-        </main>
+        <section id="seccion-reporte" style="display: none;">
+            <h2>¡Gran Trabajo!</h2>
+            <div id="reporte-final-contenido"></div>
+            <button id="btn-jugar-otra-vez">Jugar de Nuevo</button>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2025 Edukids. Todos los derechos reservados.</p>
     </footer>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
