--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>Edukids - Plataforma Educativa</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./static/css/style.css">
+     <link
+      rel="icon"
+      href="./static/img/logo-edukids-ventana.ico"
+      type="image/ico"
+    />
     <script defer src="./static/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
+        <img src="./static/img/logo-edukids.ico" alt="logo edukids" />
         <h1 id="header-title">Bienvenido a Edukids</h1>
         <p>Una plataforma para apoyar el aprendizaje de niños en memoria, lógica, cultura y lenguaje.</p>
     </header>
@@ -23,13 +28,14 @@
         </section>
 
         <section id="seccion-menu" style="display: none;">
-    <h2>Selecciona un Desafío:</h2>
-    <div class="menu-opciones">
-        <button data-challenge="memoria">1. Memoria</button>
-        <button data-challenge="operaciones">2. Operaciones</button>
-        <button data-challenge="quiz">3. Quiz</button>
-        <button data-challenge="adivinaLaPalabra">4. Adivina la palabra</button>
-        <div class="acciones-menu">
+            <h2>Selecciona un Desafío:</h2>
+            <div class="menu-opciones">
+                <button data-challenge="memoria">1. Memoria</button>
+                <button data-challenge="operaciones">2. Operaciones</button>
+                <button data-challenge="quiz">3. Quiz</button>
+                <button data-challenge="adivinaLaPalabra">4. Adivina la palabra</button>
+            </div>
+            <div class="acciones-menu">
                 <button id="btn-finalizar-sesion">Finalizar y Ver Reporte</button>
                 <button id="btn-limpiar-historial">Borrar Historial</button>
             </div>
@@ -39,10 +45,7 @@
                     <li>No hay puntajes guardados aún.</li>
                 </ul>
             </div>
-    </div>
-            
-      
-</section>
+        </section>
 
         <section id="seccion-desafio" style="display: none;">
             <h2 id="desafio-titulo"></h2>
@@ -58,8 +61,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Edukids. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Edukids - <a href="https://linkedin.com/in/jucaicedoa" target="_blank">jucaicedoa</a>. Todos los derechos reservados.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
