feat: agrego font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Edukids - Plataforma Educativa</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./static/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
      <link
       rel="icon"
       href="./static/img/logo-edukids-ventana.ico"
