chore: open graph

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
       type="image/ico"
     />
     <script defer src="./static/js/main.js"></script>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jucaicedoa.github.io/proyecto-js-coder/"/>
+    <meta property="og:title" content="EDUKIDS" />
+    <meta property="og:description" content="Plataforma educativa para fortalecer aprendizaje de los niños."/>
+    <meta property="og:image" content="https://jucaicedoa.github.io/proyecto-js-coder/static/img/logo-edukids.ico" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jucaicedoa.github.io/proyecto-js-coder/"/>
+    <meta property="twitter:title" content="EDUKIDS"/>
+    <meta property="twitter:description" content="Plataforma educativa para fortalecer aprendizaje de los niños."/>
+    <meta property="twitter:image" content="https://jucaicedoa.github.io/proyecto-js-coder/static/img/logo-edukids.ico" />
+
 </head>
 <body>
     <header>
