--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="https://jucaicedoa.github.io/proyecto-js-coder/"/>
     <meta property="og:title" content="EDUKIDS" />
     <meta property="og:description" content="Plataforma educativa para fortalecer aprendizaje de los niños."/>
-    <meta property="og:image" content="https://jucaicedoa.github.io/proyecto-js-coder/static/img/logo-edukids.ico" />
+    <meta property="og:image" content="https://jucaicedoa.github.io/proyecto-js-coder/static/img/logo-edukids.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://jucaicedoa.github.io/proyecto-js-coder/"/>
     <meta property="twitter:title" content="EDUKIDS"/>
     <meta property="twitter:description" content="Plataforma educativa para fortalecer aprendizaje de los niños."/>
-    <meta property="twitter:image" content="https://jucaicedoa.github.io/proyecto-js-coder/static/img/logo-edukids.ico" />
+    <meta property="twitter:image" content="https://jucaicedoa.github.io/proyecto-js-coder/static/img/logo-edukids.png" />
 
 </head>
 <body>
