fix: ajusto footer

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Edukids - <a href="https://linkedin.com/in/jucaicedoa" target="_blank">jucaicedoa</a>. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Edukids - <a href="https://linkedin.com/in/jucaicedoa" target="_blank">jucaicedoa</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
