feat: agrego js data y seccion ranking

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="./static/img/logo-edukids-ventana.ico"
       type="image/ico"
     />
+    <!-- JS -->
+    <script defer src="./static/js/data.js"></script>
     <script defer src="./static/js/main.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -71,6 +73,15 @@
                 <ul id="score-lista">
                     <li>No hay puntajes guardados aún.</li>
                 </ul>
+                <button id="btn-limpiar-usuario">Borrar mi historial</button>
+            </div>
+            
+            <div class="ranking-tabla">
+                <h3>Ranking General:</h3>
+                <ul id="ranking-lista">
+                    <li>No hay ranking disponible.</li>
+                </ul>
+                <button id="btn-limpiar-ranking">Borrar todo el ranking</button>
             </div>
         </section>
 
